--- a/popup.css
+++ b/popup.css
@@ -88,3 +88,21 @@ input:checked + .slider:before {
     font-size: 12px;
     color: #666;
 } 
+
+.github-link {
+    margin-top: 6px;
+    color: #333;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.github-link:hover {
+    color: #000;
+}
+
+.github-icon {
+    width: 16px;
+    height: 16px;
+}
